--- a/requirements.txt
+++ b/requirements.txt
@@ -2,18 +2,18 @@
 # I am not 100% sure this runs on other IDEs, but it should
 
 cvzone==1.5.6
-ultralytics==8.0.26
-hydra-core>=1.2.0
-matplotlib>=3.2.2
-numpy>=1.18.5
-opencv-python==4.5.4.60
-Pillow>=7.1.2
+ultralytics==8.0.77
+hydra-core==1.3.2
+matplotlib==3.7.1
+numpy==1.24.2
+opencv-python==4.7.0.72
+Pillow==9.5.0
 PyYAML>=5.3.1
-requests>=2.23.0
-scipy>=1.4.1
+requests==2.28.2
+scipy==1.10.1
 torch>=1.7.0
-torchvision>=0.8.1
-tqdm>=4.64.0
+torchvision==0.15.1
+tqdm==4.65.0
 filterpy==1.4.5
-scikit-image==0.19.3
+scikit-image==0.20.0
 lap==0.4.0
